Fix h1 overflow on Supporters screen

--- a/src/screens/Supporters/styles.module.sass
+++ b/src/screens/Supporters/styles.module.sass
@@ -10,8 +10,6 @@
   h1
     margin: 1rem 0
     text-transform: uppercase
-    overflow-wrap: anywhere
-    hyphens: auto
   p
     font-size: 1.1rem
     margin: 1.1rem 0
