--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -14,7 +14,7 @@
   scrollbar-color: $green black
 
   ::-webkit-scrollbar
-    width: 1rem
+    width: .9rem
   ::-webkit-scrollbar-track
     background: black
   ::-webkit-scrollbar-thumb
